
20070310: Applied patch #1673118 - More features to candles - thanks to ommarcocarvalho for the patch.

20070313: Applied patch #1678913 - Restore most of the prog settings/status - thanks to loh_tar for the patch.

20070417: Applied patch #1701281 - revert changes to BARS which broke candles - thanks to xley for the patch.

20070417: Applied patch #1701267 - progressBar for quote plugins - thanks to xley for the patch.

20070518: Applied patch #1711711 - repeat "Symbol" column at end of IndicatorSummary - thanks to xley for the patch.

20070518: Applied patch #1711714 - show Buy/Sell objects in the data panel - thanks to xley for the patch.

20070519: Applied patch #1716890 - automated help docs for indicators - thanks to xley for the patch.

20070523: Applied part patch #1716538 - misc/CUS_examples/Contributions/lvgandhi/Ray* for Elder Ray Bull Power and Ray Bear Power - thanks to lvgandhi for the patch.

20070523: Applied part patch #1716538 - misc/CUS_examples/Contributions/lvgandhi/FIMAs for Force Index with MAs - thanks to lvgandhi for the patch.

20070524: Applied part patch #1716538 - misc/CUS_examples/Contributions/ravisghosh/Envelope - thanks to ravisghosh for the patch.

20070524: misc/CUS_examples/Contributions/xley/star - Demonstrate detection of various different star candle patterns. Remember with three-day patterns, that the highlight refers to the previous day. - thanks to xley for the patch.

20070525: Improved docs/index.html (and hence qtstalker.sf.net) with deliberately basic CSS. - thanks to xley for the patch.

20070525: misc/CUS_examples/Contributions/xley/kk - Indicator (kk) and Scanner
(s-kk) example for detecting Piercing Line (Kirikomi) and Dark Cloud Cover
(Kabuse) candles. Also has documentation. - thanks to xley for the patch.

20070529: FI indicator now properly handles "maType" and "smoothing" when used via CUS. Fixes bug #1716543. - thanks to xley for the patch.
